--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
   font-family: "Inter UI", sans-serif;
   text-align: center;
   color: white;
-  height: 100%;
+  height: 100vh;
   /* overscroll-behavior: contain; */
 }
 
@@ -257,8 +257,9 @@ tr {
 }
 
 #tierlist {
-  margin-top: 1em;
+  margin-top: 2em;
   background: black;
+  width: 70%;
 }
 
 .tierrow {
@@ -328,7 +329,7 @@ input {
 #dropbox {
   color: black;
   background-color: #78D5D7;
-  width: 20rem;
+  width: 20%;
   height: 30rem;
   border: 2px solid black;
   border-right: none;
@@ -384,6 +385,16 @@ a {
 p {
   margin: 20px;
   padding: 10px;
+}
+
+#videoSection {
+  margin-bottom: 8em;
+}
+
+#randomizeVid {
+  font-size: 1.5em;
+  width: auto;
+  margin-bottom: 3em;
 }
 
 code {
