--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,10 @@ body {
     margin-left: 0;
   }
 
+  .footer {
+    margin-bottom: 5rem;
+  }
+
 }
 
 
@@ -388,7 +392,23 @@ p {
 }
 
 #videoSection {
-  margin-bottom: 8em;
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  /* margin-bottom: 8em; */
+}
+
+#vidSize {
+  max-width: 60em;
+  margin: auto;
+}
+
+iframe {
+  position: absolute;
+  left:0;
+  height: 100%;
+  width: 100%;
 }
 
 #randomizeVid {
