--- a/styles.css
+++ b/styles.css
@@ -144,9 +144,15 @@ body {
 /* For small */
 @media only screen and (max-width: 600px) {
   .navbar {
+    display: flex;
     bottom: 0;
     width: 100vw;
     height: 5rem;
+    justify-content: space-evenly;
+  }
+
+  .nav-item {
+    font-size: 7vw;
   }
 
   .logo {
@@ -172,6 +178,49 @@ body {
 }
 
 
+/* Recomendations */
+
+#timer {
+  font-size: 3em;
+}
+
+.categories {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.category {
+  max-width: 300px;
+  /* max-height: 600px; */
+}
+
+.mediaImg {
+  border-radius: 2em;
+}
+
+.summary {
+  font-size: 1.75em;
+  font-style: oblique;
+}
+
+.mediaImg:hover {
+  /* pulse */
+  /* animation: pulse 0.75s; */
+  /* animation-timing-function: linear; */
+
+  /* Zoom hover */
+  transform: scale(1.1);
+  transition: all ease 500ms;
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.1);}
+  100% { transform: scale(1); }
+}
+
+/* End of Recommendations */
 
 
 /* Only works for chrome */
@@ -186,6 +235,8 @@ body::-webkit-scrollbar-thumb {
   background: #F7F9F9;
 } */
 
+/* Home Page */
+
 .title-name {
   margin: 0;
   overflow: hidden;
@@ -193,7 +244,11 @@ body::-webkit-scrollbar-thumb {
   color: var(--color5);
   letter-spacing: -4.5px;
   text-transform: uppercase;
-  padding: 0 16px;
+}
+.options {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .box-container {
@@ -201,14 +256,12 @@ body::-webkit-scrollbar-thumb {
   height: 250px;
   border-radius: 20px;
   padding: 20px;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-top: 2rem;
   background-image: linear-gradient(#BED8D4, #78D5D7);
   border: 4px solid #2081C3;
   overflow-y: auto;
   display: inline-block;
   position: relative;
+  margin-top: 2em;
 }
 
 .button {
@@ -428,11 +481,6 @@ code {
   border: 1px solid #7f797f;
   border-radius: 8px;
   margin-bottom: 16px;
-}
-
-.options {
-  margin: 1em;
-  display: inline-block;
 }
 
 span {
